--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.1",
     "redux": "^4.0.5",
-    "redux-form": "^8.3.0"
+    "redux-form": "^8.3.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
